<resources>
    <string name="app_name">CallGency</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_info">Information</string>
    <string name="title_status">Status</string>
    <string name="title_ambulance">Ambulance</string>
    <string name="title_map">Map</string>
    <string name="title_sign_in">Sign In</string>
    <string name="title_sign_up">Sign Up</string>
    <string name="title_settings">Settings</string>
    <string name="title_share">Share</string>
    <string name="title_rate">Rate Us</string>
    <string name="title_signout">Sign Out</string>
    <string name="title_others">Others</string>

    <string name="text_email">Email</string>
    <string name="text_password">Password</string>
    <string name="text_doesnthaveaccount">Doesnt Have Account?</string>
    <string name="text_createsome">Create Some</string>
    <string name="text_fullname">Full Name</string>
    <string name="text_nik">NIK</string>
    <string name="text_address">Address</string>
    <string name="text_alreadyhaveaccount">Already Have Account?</string>
    <string name="text_signinnow">Sign In Now</string>
    <string name="title_activity_maps">Map</string>
    <string name="dummy">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>


</resources>
